# robot_control

./: README.md
minitask1/: CMakeLists.txt
minitask1/src/: task3.py  task4.py
minitask2/: CMakeLists.txt
minitask2/src/: TurtleNav.py
minitask3/: CMakeLists.txt
minitask3/src/: Global.py  Logger.py  TurtleNav.py
minitask3/src/actions/: IAction.py  ObstacleAvoid.py  RandomWalk.py  RhWallFollow.py  RunToGreen.py
minitask3/src/common/: DataStruct.py  __init__.py
minitask3/src/subscriber/: ImageRawSubscribe.py  OdomSubscribe.py  ScanSubscribe.py
minitask4/: CMakeLists.txt  command.md
minitask4/maps/: map.pgm
minitask4/src/: Global.py  TurtleNav.py
minitask4/src/actions/: MoveToGoal.py  ObstacleAvoid.py
minitask4/src/common/: DataStruct.py  OccupiedGrid.py
minitask4/src/listener/: DrawCostMap.py
minitask4/src/subscriber/: OdomSubscribe.py  ScanSubscribe.py  (+1 more)
minitask5/: CMakeLists.txt  command
minitask5/launch/: turtlebot3_training.launch
minitask5/src/: Global.py  Part3.py  TurtleNav.py
minitask5/src/actions/: MoveToGoal.py  RandomWalk.py  RhWallFollow.py
minitask5/src/common/: DataStruct.py  OccupiedGrid.py  __init__.py
minitask5/src/listener/: DrawCostMap.py
minitask5/src/path_finding/: AStar.py  Dwa.py  GlobalPath.py  LocalPath.py  MoveToChecking.py
minitask5/src/publisher/: CostMapPub.py
minitask5/src/subscriber/: ImageRawSubscribe.py  OdomSubscribe.py  SubSyn.py
minitask5/src/tests/: cost_map.txt  globalTests.py  indexTests.py  robotToMapTests.py  toGridTests.py  toWorldTests.py
minitask5/worlds/: comp4034_training.world
